# glow

./: .gitignore  BuildSDK.bat  CMakeLists.txt  CMakePresets.json  Changelog.md  FrameBuffer.cpp  FrameBuffer.h  LICENSE.txt  README.md  Shader.h  Texture.cpp  VertexBuffer.cpp  glow.h  glow.sln  glow.vcxproj  glow.vcxproj.filters  rioki_glowConfig.cmake.in  util.cpp  vcpkg.json
.github/workflows/: cmake.yml  msbuild.yml
glow/: FrameBuffer.cpp  FrameBuffer.h  Parameters.cpp  Parameters.h  Pipeline.cpp  Pipeline.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  defines.h  fwd.h  glow.aps  glow.h  glow.vcxproj  glow.vcxproj.filters  pch.cpp  pch.h  util.cpp  util.h
glow/x64/Debug/: vc141.idb
glow/x64/Debug/glow.tlog/: CL.command.1.tlog  CL.write.1.tlog  glow.lastbuildstate  glow.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glow/x64/Release/glow.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glow.lastbuildstate  glow.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glow/x86/Debug/: vc141.idb
glow/x86/Debug/glow.tlog/: CL.command.1.tlog  CL.write.1.tlog  glow.lastbuildstate  glow.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glow/x86/Release/glow.tlog/: CL.command.1.tlog  CL.write.1.tlog  glow.lastbuildstate  glow.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
